backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: fastapi-backend
        image: europe-west4-docker.pkg.dev/hispanie/hispanie-docker/hispanie_backend-app:0.1
        ports:
        - containerPort: 3201
